--- a/template/.vscode/extensions.json
+++ b/template/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "msjsdiag.debugger-for-chrome",
         "mikestead.dotenv",
         "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode"
+        "esbenp.prettier-vscode",
+        "bang.antd-snippets"
     ]
 }
