Update package.json, template.json, and 4 more files...

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-comnori",
+  "name": "cra-template-comnori-typescript",
   "version": "0.1.0",
   "keywords": [
     "react",
