--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-comnori-typescript",
+  "name": "cra-template-comnori",
   "version": "0.1.0",
   "keywords": [
     "react",
